//
// This project is licensed under the MIT license. Module model-view-viewmodel is using ZK framework licensed under LGPL (see lgpl-3.0.txt).
//
// The MIT License
// Copyright © 2014-2022 Ilkka Seppälä
//
// Permission is hereby granted, free of charge, to any person obtaining a copy
// of this software and associated documentation files (the "Software"), to deal
// in the Software without restriction, including without limitation the rights
// to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
// copies of the Software, and to permit persons to whom the Software is
// furnished to do so, subject to the following conditions:
//
// The above copyright notice and this permission notice shall be included in
// all copies or substantial portions of the Software.
//
// THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
// IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
// FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
// AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
// LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
// OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
// THE SOFTWARE.
//

syntax = "proto3";

package com.iluwatar.rpc.proto;

service ShoppingService {
    rpc ReduceProductQuantity (ReduceProductRequest) returns (ReduceProductResponse);
    rpc GetAllProducts (Empty) returns (stream ProductResponse);
}

message ReduceProductRequest {
    uint64 product_id = 1;
    uint32 quantity = 2;
}

message ReduceProductResponse {
    bool status = 1;
    string message = 2;
}

message ProductResponse {
    uint64 id = 1;
    string name = 2;
    string type = 3;
    double price = 4;
}

message Empty {}
